--- a/_css/estilo-login.css
+++ b/_css/estilo-login.css
@@ -1,75 +1,93 @@
-body {
+* {
+	padding: 0px;
+	margin: 0px;
+	border: 0px;
+	box-sizing: border-box;
 	font-family: arial;
 	font-size: 10pt;
 }
 
-/*fieldset {
-	width: 300px;
-	padding: 10px;
-	position: relative;
-	left: 680px;
-	top: 0px;
-}*/
-
 .relative-parent {
-	/*background: #156236;*/
-	width: 300px;
-	height: 177px;
+	margin: auto;
+	width: 350px;
+	height: 200px;
 	padding: 10px;
+	border: 1px #888 solid;
 	position: relative;
-	left: 680px;
-	top: 0px;	
+	top: -140px;
+	left: 25%;
 }
 
-.relative {
-	/*background: #af8542;*/
-  	cursor: pointer;
-  	opacity: 0.6;
-  	position: relative;
-  	left: 245px;
-  	top: -41px;*/
-  	width: 30px;
+.blocoIcones { 
+	display: block; 
+	float: left; 
+	border: none; 
+	margin: 20px; 
+	width: 200px; 
+	height: 100%; 
 }
 
-#senha-teste {
-	height: 30px;
-	width: 207px;
-	margin: 10px;
+.blocoIcones input[type='text'], input[type='password']{ 
+	float: left; 
+	width: 100%; 
+	height: 35px; 
+	padding: 0px 30px;	
+	border: 1px solid #ccc; 
+	border-radius: 5px; 
+}
+
+svg{ width: 25px; height: 25px; }
+
+.blocoIcones button:hover svg{ fill: #000; }
+
+#site {
+	width: 700px;
+	height: 250px;
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#imagem {
+	width: 290px;
 	position: relative;
-	/*left: 10px;*/
-	border-radius: 5px;
-	border: 1px solid black;
-	font-size: 14pt;
-	padding: 0px 10px;
+	top: 50px;
 }
 
-input {
-	height: 30px;
-	width: 200px;
-	margin: 10px;
-	position: left;
-	border-radius: 5px;
-	border: 1px solid black;
-	font-size: 14pt;
-	padding: 0px 10px;
-	outline: none;
+#man, #lock{
+	position: relative;
+	top: -25px;
+	left: 10px;
 }
 
-input[type=submit]{
+#lock{
+	position: relative;
+	top: -33px;
+	left: 10px;
+}
+
+#olho {
 	cursor: pointer;
+	position: relative;
+	width: 20px;
+	height: 20px;
+	top: -27px;
+	left: 185px;
 }
 
-div {
-	padding: 0px 5px;
+#div-user {
+	position: relative;
+	width: 230px;
+	left: 60px;
+	top: -15px;
 }
 
-a {
-	font-size: 9px;
-}
-
-img {
-    max-width: 290px;
-    width: auto;
+#div-senha {
+	position: relative;
+	width: 240px;
+	left: 50px;
+	top: -55px;
 }
 
 #legenda {
@@ -77,45 +95,56 @@ img {
 	font-weight: bold;
 }
 
+#label-user {
+	position: relative;
+	right: 260px;
+	top: 15px;
+}
+
+
+#label-senha {
+	position: relative;
+	right: 260px;
+	top: 50px;
+}
+
 #botao {
-	height: 25px;
-	width: 70px;
-	font-size: 10pt;
-	text-align: center;
-	padding: 0px;
-	/*margin: 10px auto auto 73px;*/
-	position: relative;
-	top: -5px;
-	left: 70px;
-}
-
-#senha {
-	height: 30px;
-	width: 208px;
-	margin: 10px;
-	position: left;
+	cursor: pointer;
+	background-color: #3c4888;
 	border-radius: 5px;
-	border: 1px solid black;
-	font-size: 14pt;
-	padding: 0px 10px;
-}
-
-#cad-forn {
-	margin: auto 85px;
-	text-align: center;
+	margin: 10px 10px;
+	width: 80px;
+	height: 25px;
+	color: white;
 	position: relative;
-	top: -15px;
+	top: -95px;
+	left: 220px;
 }
 
 #esqueceu {
-	margin: auto auto auto 25px;
 	position: relative;
-	top: -5px;
+	top: -30px;
+	left: 70px;
 }
 
-#logo{
-	/*margin: 150px auto auto 100px;*/
-	position: relative; 
-	left: 330px; /* posiciona a 90px para a esquerda */ 
-	top: 190px; /* posiciona a 70px para baixo */
+#cad-form {
+	position: relative;
+	right: 0px;
+	top: 50px;
+}
+
+#div-links {
+	width: 250px;
+	position: relative;
+	top: -95px;
+}
+
+a {
+	font-size: 10px;
+	width: 100px;
+}
+
+img {
+    max-width: 290px;
+    width: auto;
 }
