--- a/_css/estilo-tela-gerenciar-itens-adm1.css
+++ b/_css/estilo-tela-gerenciar-itens-adm1.css
@@ -24,7 +24,7 @@
   border-radius: 0px;
 }
 
-.barra-pesquisa{
+/* .barra-pesquisa{
   margin: 0px 10px;
   padding: 0px 10px;
 	width: 92%;
@@ -41,7 +41,7 @@
   background: none;
   padding: 3px;
   border-radius: 4px;
-}
+} */
 
 .site i{
   margin-right: 15px;
@@ -86,6 +86,7 @@
   margin-right: 15px;
 }
 
+
 /* BTN COLORES */
 .btn-primary{
   border-color: #999999;
@@ -99,21 +100,20 @@
 	color: black;
 }
 
-#mais{
+#lixo{
   position: relative;
-  top: 9px;
-  cursor: pointer;
-  opacity: 0.7;
+  left: 5px;
 }
 
-#mais:hover{
-  opacity: 1;
+#lapis{
+  position: relative;
+  left: 5px;
 }
 
 #div-pesquisa{
   position: relative;
-  top: -43px;
-  left: 50px;
+  top: 0px;
+  left: 30px;
 }
 
 .blocoIcones {
@@ -161,8 +161,8 @@
   height: 35px;
 
   position: relative;
-  left: 530px;
-  top: -43px;
+  left: 550px;
+  top: 0px;
 }
 
 .botao:hover{
@@ -174,15 +174,15 @@
   cursor: pointer;
   font-size: 9px;
   position: relative;
-  top: -45px;
-  left: 8px;
+  top: -32px;
+  left: -5px;
 }
 
 .botao i{
   cursor: pointer;
   position: relative;
-  top: -33px;
-  left: 43px;
+  top: -29px;
+  left: 9px;
 }
 
 /* TABELA DE FORNECEDORES */
