--- a/_css/estilo-tela-gerenciar-fornecedores-adm.css
+++ b/_css/estilo-tela-gerenciar-fornecedores-adm.css
@@ -7,8 +7,9 @@
 
 .site {
   background: #fff;
-	width: 700px;
-	height: 500px;
+	/* margin-bottom: 50px; */
+	width: 80%;
+	height: 90%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -18,7 +19,7 @@
 .site fieldset[id='form-content']{
   position: relative;
   top: -20px;
-  height: 400px;
+  height: 500px;
   padding: 10px;
   border: 1px #888 solid;
   border-radius: 0px;
@@ -27,18 +28,19 @@
 .barra-pesquisa{
   margin: 0px 10px;
   padding: 0px 10px;
-	width: 92%;
+	width: 93%;
 
 	position: relative;
 	margin: auto auto;
 
-  height: 50px;
+  height: 60px;
   border: 1px #888 solid;
   border-radius: 4px;
+	background-color: #343A40;
 }
 
 .barra-pesquisa input{
-  background: none;
+  background: #fff;
   padding: 3px;
   border-radius: 4px;
 }
@@ -83,7 +85,7 @@
 }
 
 .btn i{
-  margin-right: 15px;
+  margin: auto;
 }
 
 /* BTN COLORES */
@@ -99,70 +101,61 @@
 	color: black;
 }
 
-#mais{
-  position: relative;
-  top: 9px;
-  cursor: pointer;
-  opacity: 0.7;
-}
-
-#mais:hover{
-  opacity: 1;
-}
-
 #div-pesquisa{
   position: relative;
-  top: -43px;
-  left: 50px;
+  top: -47px;
+  left: 70px;
 }
 
-.blocoIcones {
+.bloco-pesquisa {
   box-sizing: border-box;
-  margin: 0;
+  margin: auto 0;
 	float: left;
-	width: 35%;
+	width: 25%;
 	height: 35px;
 	border: 1px solid #ccc;
-  border-radius: 5px;
+	background: #fff;
+
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 
-.blocoIcones input[type='text'] {
+.bloco-pesquisa input[type='text'] {
 	float: left;
-	width: 80%;
+	width: 85%;
+	height: 100%;
+	padding: 0px 10px;
+	border: none;
+}
+
+.bloco-pesquisa button {
+	float: left;
+	width: 15%;
 	height: 100%;
 	border: none;
-	padding: 0px 10px;
-	background: transparent;
-}
-
-.blocoIcones button {
-	float: left;
-	width: 20%;
-	height: 100%;
-	border-radius: 0px;
-  border: none;
-	/* background: #ccc; */
   background: transparent;
-	cursor: pointer;
+	/* cursor: pointer; */
 }
 
-.blocoIcones i{
-	position: relative;
-  left: 15%;
+.bloco-pesquisa i{
+	margin: auto;
 }
 
 .botao{
   margin: 0;
   cursor: pointer;
-  background-color: transparent;
+  background-color: #fff;
   border: 1px #ccc solid;
   border-radius: 5px;
   width: 100px;
   height: 35px;
 
   position: relative;
-  left: 530px;
-  top: -43px;
+	top: -47px;
+  left: 900px;
 }
 
 .botao:hover{
@@ -189,13 +182,11 @@
 
 .tabela{
 	margin: 0;
-	height: 50%;
-	width: 100%;
+	height: 62%;
+	width: 90%;
 	position: relative;
 	top: 0px;
 	left: 5px;
-	/* border: 1px solid #ccc; */
-	/* border-radius: 10px; */
 }
 
 .tabela table {
@@ -209,12 +200,11 @@
 	text-align: center;
 }
 
-.tabela1 td, tr {
-	padding: 0px 5px;
+.tabela i{
+	margin: auto;
 }
 
 .tabela td{
 	font-weight: normal;
 }
-
 /* FIM TABELA DE FORNECEDORES */
