--- a/_css/estilo-tela-redefinir-senha.css
+++ b/_css/estilo-tela-redefinir-senha.css
@@ -1,39 +1,62 @@
-fieldset {
-	width: 500px;
-	padding: 10px;
-	margin: 20px auto auto auto;
+*{
+	padding: 0;
+	margin: 0;
+  font-family: 'Nunito', sans-serif;
+  font-weight: bold;
 }
 
-input {
-	height: 30px;
-	width: 411px;
-	margin: 10px;
-	position: left; 
-	border-radius: 5px;
-	border: 1px solid black;
-	font-size: 14pt;
-	padding: 0px 10px;
-	outline: none;
+.site {
+  background: #fff;
+	width: 520px;
+	height: 250px;
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-input[type=submit]{
-	cursor: pointer;
+.site fieldset{
+  position: relative;
+  top: -20px;
+  height: 180px;
+  padding: 10px;
+  border: 1px #888 solid;
+  border-radius: 0px;
 }
 
-body {
-	font-family: arial;
-	font-size: 10pt;
+.site input[type='email']{
+  width: 400px;
+  height: 30px;
+  padding: 0px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-weight: normal;
 }
 
-legend {
-	font-size: 16pt;
+.site input[type='submit']{
+  border: 1px solid #444;
+  position: relative;
+  left: 400px;
+	top: 20px;
+}
+
+.site input[type='submit']:hover{
+  color: white;
+  background-color: green;
+}
+
+.site label{
+  font-weight: normal;
+  margin-left: 10px;
+  margin-right: 15px;
+}
+
+.site i{
+  margin-right: 15px;
+}
+
+.site legend{
+	width: auto;
+  font-size: 18pt;
 	font-weight: bold;
-}
-
-#botao {
-	font-size: 13pt;
-	width: 70px;
-	position: relative;
-	left: 400px;
-	margin: 10px 10px;
 }
