--- a/_css/estilo-tela-gerenciar-fornecedores-adm.css
+++ b/_css/estilo-tela-gerenciar-fornecedores-adm.css
@@ -7,40 +7,33 @@
 
 .site {
   background: #fff;
-	/* margin-bottom: 50px; */
-	width: 80%;
-	height: 90%;
+	width: 730px;
+	height: 500px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
-.site fieldset[id='form-content']{
+.site fieldset{
   position: relative;
   top: -20px;
-  height: 500px;
+  height: 450px;
   padding: 10px;
   border: 1px #888 solid;
   border-radius: 0px;
 }
 
 .barra-pesquisa{
-  margin: 0px 10px;
+  margin: 0px 20px;
   padding: 0px 10px;
-	width: 93%;
-
-	position: relative;
-	margin: auto auto;
-
-  height: 60px;
+  height: 50px;
   border: 1px #888 solid;
   border-radius: 4px;
-	background-color: #343A40;
 }
 
 .barra-pesquisa input{
-  background: #fff;
+  background: none;
   padding: 3px;
   border-radius: 4px;
 }
@@ -85,7 +78,7 @@
 }
 
 .btn i{
-  margin: auto;
+  margin-right: 15px;
 }
 
 /* BTN COLORES */
@@ -101,61 +94,70 @@
 	color: black;
 }
 
+#mais{
+  position: relative;
+	left: 3px;
+  top: 9px;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+#mais:hover{
+  opacity: 1;
+}
+
 #div-pesquisa{
   position: relative;
-  top: -47px;
-  left: 70px;
+  top: -42px;
+  left: 50px;
 }
 
-.bloco-pesquisa {
+.blocoIcones {
   box-sizing: border-box;
-  margin: auto 0;
+  margin: 0;
 	float: left;
-	width: 25%;
+	width: 35%;
 	height: 35px;
 	border: 1px solid #ccc;
-	background: #fff;
-
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
-
-	border-top-right-radius: 5px;
-	border-bottom-right-radius: 5px;
+  border-radius: 5px;
 }
 
-.bloco-pesquisa input[type='text'] {
+.blocoIcones input[type='text'] {
 	float: left;
-	width: 85%;
+	width: 80%;
 	height: 100%;
+	border: none;
 	padding: 0px 10px;
-	border: none;
+	background: transparent;
 }
 
-.bloco-pesquisa button {
+.blocoIcones button {
 	float: left;
-	width: 15%;
+	width: 20%;
 	height: 100%;
-	border: none;
+	border-radius: 0px;
+  border: none;
   background: transparent;
-	/* cursor: pointer; */
+	cursor: pointer;
 }
 
-.bloco-pesquisa i{
-	margin: auto;
+.blocoIcones i{
+	position: relative;
+  left: 15%;
 }
 
 .botao{
   margin: 0;
   cursor: pointer;
-  background-color: #fff;
+  background-color: transparent;
   border: 1px #ccc solid;
   border-radius: 5px;
   width: 100px;
   height: 35px;
 
   position: relative;
-	top: -47px;
-  left: 900px;
+  left: 550px;
+  top: -42px;
 }
 
 .botao:hover{
@@ -163,48 +165,48 @@
 }
 
 .botao label{
-  display: inline-block;
   cursor: pointer;
-  font-size: 9px;
+  font-size: 10px;
   position: relative;
   top: -45px;
-  left: 8px;
+  left: 2px;
 }
 
 .botao i{
   cursor: pointer;
   position: relative;
   top: -33px;
-  left: 43px;
+  left: 42px;
 }
 
-/* TABELA DE FORNECEDORES */
+/* TABELA DE ORÇAMENTOS*/
 
 .tabela{
 	margin: 0;
-	height: 62%;
-	width: 90%;
-	position: relative;
-	top: 0px;
-	left: 5px;
+	height: 60%;
+	width: 95%;
+	/* margin-left: 10px; */
+	/* border: 1px solid #ccc; */
+	/* border-radius: 10px; */
 }
 
 .tabela table {
-	width: 95%;
+	width: 96.5%;
 	height: 90%;
-	padding: 10px;
+	/* padding: 10px; */
 	border: 1px solid #ccc;
-	border-radius: 10px;
-	position: relative;
 	margin: auto auto;
 	text-align: center;
+	position: relative;
+	left: 5px;
 }
 
-.tabela i{
-	margin: auto;
+.tabela1 td, tr {
+	padding: 0px 5px;
 }
 
 .tabela td{
 	font-weight: normal;
 }
-/* FIM TABELA DE FORNECEDORES */
+
+/* FIM TABELA DE ORÇAMENTOS */
