melhorias na tela novo orçamento, tabela dinamica + remoção de itens

--- a/_css/estilo-tela-novo-orcamento.css
+++ b/_css/estilo-tela-novo-orcamento.css
@@ -175,3 +175,12 @@
   color: white;
   background-color: orange;
 }
+
+#botao-apagar{
+	color: red;
+	cursor: pointer;
+}
+
+#botao-apagar:hover{
+	opacity: 0.7;
+}
